@@ -1388,6 +1388,7 @@ Norman Vine
 Pauli Virtanen
 Frank Visser
 Johannes Vogel
+Vajrasky Kok
 Alex Volkov
 Martijn Vries
 Sjoerd de Vries
